# Emotion-Classification-Model

./: Complete_Emotion_Detection_Analysis.ipynb  README.md  app.py  comprehensive_emotion_dataset.csv  data_processor.py  emotion_classifier.py  emotion_dataset.csv  emotion_detection_notebook.ipynb  model_evaluator.py  pyproject.toml  utils.py
